feat: add api route to find similar products

--- a/notebooks/research_alex.ipynb
+++ b/notebooks/research_alex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.metrics import silhouette_score\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from spacy.lang.en.stop_words import STOP_WORDS\n",
     "\n",
     "from training.helpers.text_processing import TextProcessing\n",
@@ -88026,11 +88027,337 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recherche des produits similaires"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_249819/843282.py:24: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"../data/production/database.csv\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>url</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>cluster_text</th>\n",
+       "      <th>similarity_text</th>\n",
+       "      <th>allergens</th>\n",
+       "      <th>traces_tags</th>\n",
+       "      <th>image_url</th>\n",
+       "      <th>nutriscore_grade</th>\n",
+       "      <th>ecoscore_grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>118949</th>\n",
+       "      <td>3274935201703</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/3274...</td>\n",
+       "      <td>Velouté de légumes verts</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.999219</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68939</th>\n",
+       "      <td>3193840504900</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/3193...</td>\n",
+       "      <td>Soupe paysanne 5 légumes</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.999104</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178427</th>\n",
+       "      <td>3564700005361</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/3564...</td>\n",
+       "      <td>Velouté de poireaux et pommes de terre</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.992874</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>112302660</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>Soupe potiron et kiri</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.991799</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:celery,en:eggs,en:gluten</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263152</th>\n",
+       "      <td>5400601007630</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/5400...</td>\n",
+       "      <td>Soupe de légumes verts</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.989280</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262565</th>\n",
+       "      <td>5400141437683</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/5400...</td>\n",
+       "      <td>Velouté de courgettes Social local veggie</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.988572</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32402</th>\n",
+       "      <td>2200720000009</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/2200...</td>\n",
+       "      <td>Velouté de courgette</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.984279</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>311001</th>\n",
+       "      <td>8712100647055</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/8712...</td>\n",
+       "      <td>Crema Vichyssoise 500 ML</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.981875</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:celery,en:eggs,en:gluten</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221711</th>\n",
+       "      <td>3760131653786</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/3760...</td>\n",
+       "      <td>Soupe Légumes Tradition</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.959728</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a-plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48031</th>\n",
+       "      <td>3036811367633</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/3036...</td>\n",
+       "      <td>Mouline de legumes &amp; Epautre</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0.954756</td>\n",
+       "      <td>en:none</td>\n",
+       "      <td>en:eggs</td>\n",
+       "      <td>https://images.openfoodfacts.org/images/produc...</td>\n",
+       "      <td>c</td>\n",
+       "      <td>a-plus</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 code                                                url  \\\n",
+       "118949  3274935201703  http://world-en.openfoodfacts.org/product/3274...   \n",
+       "68939   3193840504900  http://world-en.openfoodfacts.org/product/3193...   \n",
+       "178427  3564700005361  http://world-en.openfoodfacts.org/product/3564...   \n",
+       "61          112302660  http://world-en.openfoodfacts.org/product/0000...   \n",
+       "263152  5400601007630  http://world-en.openfoodfacts.org/product/5400...   \n",
+       "262565  5400141437683  http://world-en.openfoodfacts.org/product/5400...   \n",
+       "32402   2200720000009  http://world-en.openfoodfacts.org/product/2200...   \n",
+       "311001  8712100647055  http://world-en.openfoodfacts.org/product/8712...   \n",
+       "221711  3760131653786  http://world-en.openfoodfacts.org/product/3760...   \n",
+       "48031   3036811367633  http://world-en.openfoodfacts.org/product/3036...   \n",
+       "\n",
+       "                                     product_name  cluster_text  \\\n",
+       "118949                   Velouté de légumes verts           198   \n",
+       "68939                    Soupe paysanne 5 légumes           198   \n",
+       "178427     Velouté de poireaux et pommes de terre           198   \n",
+       "61                          Soupe potiron et kiri           198   \n",
+       "263152                     Soupe de légumes verts           198   \n",
+       "262565  Velouté de courgettes Social local veggie           198   \n",
+       "32402                        Velouté de courgette           198   \n",
+       "311001                   Crema Vichyssoise 500 ML           198   \n",
+       "221711                    Soupe Légumes Tradition           198   \n",
+       "48031                Mouline de legumes & Epautre           198   \n",
+       "\n",
+       "        similarity_text allergens                  traces_tags  \\\n",
+       "118949         0.999219   en:none                      en:none   \n",
+       "68939          0.999104   en:none                      en:none   \n",
+       "178427         0.992874   en:none                      en:none   \n",
+       "61             0.991799   en:none  en:celery,en:eggs,en:gluten   \n",
+       "263152         0.989280   en:none                      en:none   \n",
+       "262565         0.988572   en:none                      en:none   \n",
+       "32402          0.984279   en:none                      en:none   \n",
+       "311001         0.981875   en:none  en:celery,en:eggs,en:gluten   \n",
+       "221711         0.959728   en:none                      en:none   \n",
+       "48031          0.954756   en:none                      en:eggs   \n",
+       "\n",
+       "                                                image_url nutriscore_grade  \\\n",
+       "118949  https://images.openfoodfacts.org/images/produc...                c   \n",
+       "68939   https://images.openfoodfacts.org/images/produc...                c   \n",
+       "178427  https://images.openfoodfacts.org/images/produc...                c   \n",
+       "61      https://images.openfoodfacts.org/images/produc...                c   \n",
+       "263152  https://images.openfoodfacts.org/images/produc...                c   \n",
+       "262565  https://images.openfoodfacts.org/images/produc...                c   \n",
+       "32402   https://images.openfoodfacts.org/images/produc...                c   \n",
+       "311001  https://images.openfoodfacts.org/images/produc...                c   \n",
+       "221711  https://images.openfoodfacts.org/images/produc...                c   \n",
+       "48031   https://images.openfoodfacts.org/images/produc...                c   \n",
+       "\n",
+       "       ecoscore_grade  \n",
+       "118949              a  \n",
+       "68939               a  \n",
+       "178427              a  \n",
+       "61                  a  \n",
+       "263152              a  \n",
+       "262565              a  \n",
+       "32402               a  \n",
+       "311001              a  \n",
+       "221711         a-plus  \n",
+       "48031          a-plus  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Définir les colonnes numériques et catégorielles\n",
+    "NUMERIC_COLUMNS = [\n",
+    "    \"energy_100g\",\n",
+    "    \"fat_100g\",\n",
+    "    \"saturated-fat_100g\",\n",
+    "    \"cholesterol_100g\",\n",
+    "    \"sugars_100g\",\n",
+    "    \"proteins_100g\",\n",
+    "    \"salt_100g\",\n",
+    "    \"fruits-vegetables-nuts-estimate-from-ingredients_100g\",\n",
+    "    \"preprocessed_nutriscore_grade\",\n",
+    "    \"preprocessed_ecoscore_grade\",\n",
+    "]\n",
+    "CATEGORIAL_COLUMNS = [\n",
+    "    \"product_name\",\n",
+    "    \"packaging_tags\",\n",
+    "    \"categories_tags\",\n",
+    "    \"ingredients_tags\",\n",
+    "    \"ingredients_analysis_tags\",\n",
+    "    \"main_category\",\n",
+    "]\n",
+    "\n",
+    "# Charger les données\n",
+    "df = pd.read_csv(\"../data/production/database.csv\")\n",
+    "\n",
+    "allergen = \"en:milk\"\n",
+    "code = 112302621\n",
+    "\n",
+    "# 1. Identifier le cluster du produit de référence\n",
+    "product_cluster = df.loc[df[\"code\"] == code, \"cluster_text\"].values[0]\n",
+    "target_features = df.loc[df[\"code\"] == code, NUMERIC_COLUMNS].values\n",
+    "\n",
+    "# 2. Récupérer et fusionner les colonnes catégorielles\n",
+    "encoded_categorical_features = pd.read_csv(\"../data/production/categorical_features.csv\")\n",
+    "cluster_features_combined = pd.concat([df, encoded_categorical_features], axis=1)\n",
+    "\n",
+    "# 3. Filtrer les produits du même cluster\n",
+    "similar_cluster_products = cluster_features_combined[cluster_features_combined[\"cluster_text\"] == product_cluster]\n",
+    "\n",
+    "# 4. Au besoin rechercher s'il y a des produits ne pouvant être présenté à cause d'allergies\n",
+    "if allergen:\n",
+    "        similar_cluster_products = similar_cluster_products[\n",
+    "            ~similar_cluster_products['allergens'].fillna('').str.contains(allergen, case=False) &\n",
+    "            ~similar_cluster_products['traces_tags'].fillna('').str.contains(allergen, case=False)\n",
+    "        ]\n",
+    "\n",
+    "\n",
+    "# 5. Sélectionner uniquement les colonnes numériques pour le calcul de la similarité\n",
+    "similar_cluster_numeric_features = similar_cluster_products[NUMERIC_COLUMNS].values\n",
+    "\n",
+    "# 6. Calcul des similarités de cosinus\n",
+    "similarities = cosine_similarity(target_features.reshape(1, -1), similar_cluster_numeric_features).flatten()\n",
+    "\n",
+    "# 7. Ajouter la similarité aux produits similaires\n",
+    "similar_cluster_products = similar_cluster_products.assign(similarity_text=similarities)\n",
+    "\n",
+    "# 8. Trier et retourner les produits les plus similaires\n",
+    "result = similar_cluster_products.sort_values(by=\"similarity_text\", ascending=False)[\n",
+    "    [\"code\", \"url\", \"product_name\", \"cluster_text\", \"similarity_text\", \"allergens\", \"traces_tags\", \"image_url\", \"nutriscore_grade\", \"ecoscore_grade\"]\n",
+    "].head(10)\n",
+    "\n",
+    "display(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "tf-gpu-env",
    "language": "python",
    "name": "python3"
   },
@@ -88044,7 +88371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
