feat: update research notebook

--- a/notebooks/research_alex.ipynb
+++ b/notebooks/research_alex.ipynb
@@ -30906,6 +30906,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "@todo:\n",
+    "\n",
+    "tester la feature selection (cf walmart project)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "@todo :\n",
     "\n",
     "tester word embeding\n",
@@ -30932,6 +30941,13 @@
    "source": [
     "### DBSCAN"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
